--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: 0.19.0
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
