--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     sdk: flutter
   intl: 0.19.0
   window_manager: ^0.4.3
+  event_bus: ^2.0.1
 
 dev_dependencies:
   flutter_test:
