--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: 0.19.0
   window_manager: ^0.4.3
   event_bus: ^2.0.1
+  multi_split_view: ^3.6.0
 
 dev_dependencies:
   flutter_test:
