--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   window_manager: ^0.4.3
   event_bus: ^2.0.1
   multi_split_view: ^3.6.0
+  multi_column_list_view: ^0.0.1
 
 dev_dependencies:
   flutter_test:
