--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,5 +8,6 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.92"
+chrono = "0.4.39"
 flutter_rust_bridge = "=2.5.1"
 sysinfo = { version = "0.33.0" }
