--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,13 @@ dependencies:
   event_bus: ^2.0.1
   multi_split_view: ^3.6.0
   multi_column_list_view: ^0.0.1
+  package_info_plus: ^8.0.1
+  path_provider: ^2.1.5
+  path: 1.9.0
+  get: ^4.6.6
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
+
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +65,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   integration_test:
     sdk: flutter
+  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
