Optimize code loginc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,7 @@ dependencies:
   get: ^4.6.6
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
-  flutter_colorful_tab:
-    path: ../../flt_pkgs/flutter_colorful_tab
+  flutter_colorful_tab: ^0.1.1
 
 
 dev_dependencies:
