--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   window_manager: ^0.4.3
   event_bus: ^2.0.1
   multi_split_view: ^3.6.0
-  multi_column_list_view: ^0.0.1
+  multi_column_list_view:
+    path: ../../flt_pkgs/multi_column_list_view
   package_info_plus: ^8.0.1
   path_provider: ^2.1.5
   path: 1.9.0
@@ -52,7 +53,7 @@ dependencies:
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   flutter_colorful_tab: ^0.1.1
-
+  contextmenu: ^3.0.0
 
 dev_dependencies:
   flutter_test:
