--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   json_serializable: ^6.8.0
   flutter_colorful_tab: ^0.1.1
   contextmenu: ^3.0.0
+  archive: ^4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.11
 
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -81,7 +83,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/file-ext-icons.zip
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
