--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,7 @@ dependencies:
   window_manager: ^0.4.3
   event_bus: ^2.0.1
   multi_split_view: ^3.6.0
-  multi_column_list_view:
-    path: ../../flt_pkgs/multi_column_list_view
+  multi_column_list_view: ^0.0.8
   package_info_plus: ^8.0.1
   path_provider: ^2.1.5
   path: 1.9.0
