--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_pty: ^0.4.2
   dio: ^5.8.0+1
   pretty_json: ^2.0.0
+  dio_util:
+    path: ../../flt_pkgs/dio_util
 
 dev_dependencies:
   flutter_test:
