--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   window_manager: ^0.4.3
   event_bus: ^2.0.1
   multi_split_view: ^3.6.0
-  multi_column_list_view: ^0.0.8
+  multi_column_list_view: 
+    path: ../../flt_pkgs/multi_column_list_view
   package_info_plus: ^8.0.1
   path_provider: ^2.1.5
   path: 1.9.0
@@ -62,6 +63,11 @@ dependencies:
   pretty_json: ^2.0.0
   dio_util:
     path: ../../flt_pkgs/dio_util
+  flutter_markdown: ^0.7.6+2
+  code_text_field: ^1.1.0
+  linked_scroll_controller: ^0.2.0
+  highlight: ^0.7.0
+  flutter_highlight: ^0.7.0
 
 dev_dependencies:
   flutter_test:
