--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   linked_scroll_controller: ^0.2.0
   highlight: ^0.7.0
   flutter_highlight: ^0.7.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
