Split and magic modify tab widget from fui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,8 +72,8 @@ dependencies:
   highlight: ^0.7.0
   flutter_highlight: ^0.7.0
   uuid: ^4.5.1
-  animated_tree_view:
-    path: ../flt_pkgs/animated_tree_view_keep
+#  animated_tree_view:
+#    path: ../flt_pkgs/animated_tree_view_keep
   fluent_ui: ^4.11.2
 
 dev_dependencies:
