--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,7 +130,13 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+
+  fonts:
+    - family: NotoSansSC
+      fonts:
+        - asset: assets/fonts/NotoSansSC-Regular.ttf
+          weight: 400
+          style: normal
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
 
