--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,9 @@ dependencies:
   window_manager: ^0.4.3
   event_bus: ^2.0.1
   multi_split_view: ^3.6.0
-  multi_column_list_view: 
-    path: ../flt_pkgs/flutter_multi_column_list_view
+  multi_column_list_view: ^0.0.10
+#  multi_column_list_view:
+#    path: ../flt_pkgs/flutter_multi_column_list_view
   package_info_plus: ^8.0.1
   path_provider: ^2.1.5
   path: 1.9.1
@@ -72,9 +73,8 @@ dependencies:
   highlight: ^0.7.0
   flutter_highlight: ^0.7.0
   uuid: ^4.5.1
-#  animated_tree_view:
-#    path: ../flt_pkgs/animated_tree_view_keep
   fluent_ui: ^4.11.2
+  top_modal_sheet: ^2.1.0
 
 dev_dependencies:
   flutter_test:
