--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,6 +14,7 @@ flutter_rust_bridge_codegen = "=2.5.1"
 sysinfo = { version = "0.33.0" }
 palcrypto-rs = { version = "0.2.8" }
 base64 = { version = "0.22.1" }
+sandbarclient-lib = { path = "../../rust-sandbarclient/sandbarclient-lib"}
 
 
 
