--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ dependencies:
   uuid: ^4.5.1
   fluent_ui: ^4.11.2
   top_modal_sheet: ^2.1.0
+  file_picker: ^10.1.4
+  easy_isolate: ^1.3.1
 
 dev_dependencies:
   flutter_test:
