--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,6 +14,8 @@ flutter_rust_bridge_codegen = "=2.5.1"
 sysinfo = { version = "0.33.0" }
 palcrypto-rs = { version = "0.2.8" }
 base64 = { version = "0.22.1" }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.140"
 quic-rpc = { version = "0.19", features = ["quinn-transport", "macros", "test-utils"] }
 sandbarclient-lib = { path = "../../rust-sandbarclient/sandbarclient-lib"}
 sandbarclient-type = { path = "../../rust-sandbarclient/sandbarclient-type"}
