--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,15 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 [dependencies]
 anyhow = "1.0.92"
 chrono = "0.4.39"
+derive_more = { version = "1.0.0", features = [
+    "debug",
+    "display",
+    "deref",
+    "deref_mut",
+    "from",
+    "try_into",
+    "into",
+] }
 flutter_rust_bridge = "=2.9.0"
 flutter_rust_bridge_codegen = "=2.5.1"
 sysinfo = { version = "0.33.0" }
