--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   top_modal_sheet: ^2.1.0
   file_picker: ^10.1.4
   easy_isolate: ^1.3.1
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
